addOrderToDevice impl
